--- a/styles.css
+++ b/styles.css
@@ -1,38 +1,214 @@
-*:focus{
+@import url("https://use.typekit.net/zfl7ylc.css");
+
+*:focus {
     outline: none;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;/*Respetar los padding adicionales*/
-    background-color: rgb(207, 216, 228);
+    box-sizing: border-box;
+    font-family: "museo-slab", serif;
+    /*Respetar los padding adicionales*/
 }
-html{
+
+html {
     scroll-behavior: smooth;
 }
-header .intro{
-    color: #fff;
-    margin: 20px;
-    min-width: 150px;
-    opacity: 1 !important;
-    display: inline-block;
-    visibility: visible !important;
-    border: 2px solid #fff;
+
+header .bar ul {
+    background-color: #394867;
+    box-shadow: 0px 0px 10px #33415c;
+    margin: 0;
+    padding: 1rem 0;
+    border-radius: 0.2rem;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    font-size: 30px;
+}
+
+header .bar li {
+    list-style-type: none;
+    margin-right: 2rem;
+    /* display: inline-block; */
+}
+
+header .bar li a {
     text-decoration: none;
-    border-radius: 5px;
-    padding: 10px 20px;
+    color: #f5f5dc;
+}
+
+header .bar li:first-child {
+    margin-right: auto;
+    margin-left: 2rem;
+}
+
+
+header .bar a:hover {
+    color: #000;
+    transition: all 200ms ease-in;
+}
+
+header .bar button {
+    background-color: transparent;
+    transition: all 200ms ease-in;
+    font-size: 30px;
+    border: none;
+    outline: none;
+    color: #f5f5dc;
     cursor: pointer;
 }
-header {
-    background-image: url(Media/Desert.mp4);
-    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+
+header .bar button:hover {
+    color: #352F44;
 }
-video {
-	opacity: .80;
-	background-repeat: repeat;
-	background-attachment:scroll;
-	width:100%;
-	height:100%;
-	position:absolute;
-	z-index: -1;
-	top:0;
-	left:0
+
+main {
+    height: calc(100vh - 80px);
+    width: 100%;
+    background-size: cover;
+    background-position: center;
+}
+
+main .call {
+    color: #fff;
+    width: 60%;
+    border: 10px dotted #394867;
+    padding: 20px;
+    float: right;
+}
+
+main #background-video {
+    width: 100vw;
+    height: 100vh;
+    object-fit: cover;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: -1;
+}
+
+main .call #call-image {
+    float: right;
+    width: 300px;
+    height: 400px;
+    text-align: left;
+}
+
+main .call h1 {
+    color: #f5f5dc;
+    margin-bottom: 20px;
+}
+
+main .call p {
+    font-size: medium;
+    margin-bottom: 40px;
+}
+
+main .call a {
+    background-color: #394867;
+    color: #fff;
+    text-decoration: none;
+    padding: 10px 20px;
+}
+
+main .call a:hover {
+    background-color: #333;
+}
+
+h2 {
+    background-color: #394867;
+    color: #fff;
+    text-align: center;
+    font-size: 24px;
+    text-transform: uppercase;
+    padding: 20px;
+}
+
+section {
+    background-color: hsl(221, 31%, 19%,0.5);
+    height: 700px;
+    width: 100%;
+    display: flex;
+    margin: 0;
+}
+
+.sec1 {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    flex-flow: wrap row;
+    justify-content: space-evenly;
+    align-items: center;
+    /* Aling content para organizar todo evenly dentro de un */
+}
+
+.item {
+    height: 120px;
+    width: 120px;
+    background-color: #394867;
+    border: 2px solid #fff;
+    text-align: center;
+    font-size: 22px;
+    line-height: 120px;
+    text-transform: uppercase;
+    color: #fff;
+    border-radius: 20px;
+}
+
+.item2 {
+    line-height: 200px;
+    order: 0;
+    /* flex-grow: 2; */
+    flex-shrink: 2;
+    flex-basis: 120px;
+}
+
+.item4 {
+    line-height: 40px;
+    order: 0;
+    flex-grow: 4;
+    flex-basis: 120px;
+}
+
+footer {
+    background-color: #212A3E;
+    color: #f5f5dc;
+    text-align: center;
+    font-size: 30px;
+    padding: 20px;
+}
+
+footer p {
+    margin-bottom: 20px;
+
+}
+
+.redes a {
+    font-size: 50px;
+    color: #f5f5dc;
+}
+
+.redes i {
+    letter-spacing: 20px;
+}
+
+.up {
+    height: 40px;
+    width: 40px;
+    border-radius: 20px;
+    background-color: #394867;
+    color: #fff;
+    position: fixed;
+    right: 40px;
+    bottom: 40px;
+    text-align: center;
+    line-height: 40px;
+    font-size: 30px;
+    box-shadow: 0 0 5px #fff;
+    transition: all 200ms ease-in-out;
+}
+
+.up:hover {
+    color: #352F44;
 }
