--- a/styles.css
+++ b/styles.css
@@ -177,35 +177,58 @@ section {
     overflow: scroll;
     margin-bottom: 20px;
 }
-.sec2-travel-video a{
+
+.sec2-travel-video a {
     text-decoration: none;
 }
 
 /* Carrousel attempt only with CSS*/
 
 #slider {
-	overflow: hidden;
+    overflow: hidden;
     margin-top: 20px;
 }
+
 /* Positions, moving to the left */
 @keyframes slider {
-	0% { left: 0; }
-	30% { left: 0; }
-	33% { left: -100%; }
-	63% { left: -100%; }
-	66% { left: -200%; }
-	95% { left: -200%; }
-	100% { left: 0; }
+    0% {
+        left: 0;
+    }
+
+    30% {
+        left: 0;
+    }
+
+    33% {
+        left: -100%;
+    }
+
+    63% {
+        left: -100%;
+    }
+
+    66% {
+        left: -200%;
+    }
+
+    95% {
+        left: -200%;
+    }
+
+    100% {
+        left: 0;
+    }
 }
+
 #slider figure {
-	width:300%;
-	position: relative;
-	animation: 9s slider infinite;
-} 
+    width: 300%;
+    position: relative;
+    animation: 9s slider infinite;
+}
 
 #slider figure img {
-	height : 600px;
-	float: left;
+    height: 600px;
+    float: left;
 }
 
 /* footer */
@@ -254,12 +277,12 @@ footer p {
     color: #352F44;
 }
 
-#sec4 a{
+#sec4 a {
     text-decoration: none;
     color: #fff;
 }
 
-.sec4-contact a{
+.sec4-contact a {
     text-decoration: none;
     color: #fff;
 }
@@ -418,3 +441,47 @@ footer p {
 /* -------------ABOUT ME------------- */
 
 /* -------------GALLERY------------- */
+
+.body {
+    height: -o-calc(100% - 65px);
+    /* opera */
+    height: -webkit-calc(100% - 65px);
+    /* google, safari */
+    height: -moz-calc(100% - 65px);
+    /* firefox */
+    background-color: #fafafa;
+}
+
+.container {
+    max-width: 100rem;
+    margin: 0 auto;
+    padding: 0 2rem 2rem;
+}
+
+.gallery {
+    display: flex;
+    flex-wrap: wrap;
+    /* Compensate for excess margin on outer gallery flex items */
+    margin: -1rem -1rem;
+}
+
+.gallery-item {
+    /* Minimum width of 24rem and grow to fit available space */
+    flex: 1 0 24rem;
+    /* Margin value should be half of grid-gap value as margins on flex items don't collapse */
+    margin: 1rem;
+    box-shadow: 0.3rem 0.4rem 0.4rem rgba(0, 0, 0, 0.4);
+    overflow: hidden;
+}
+
+.gallery-image {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: transform 400ms ease-out;
+}
+
+.gallery-image:hover {
+    transform: scale(1.15);
+}
