--- a/styles.css
+++ b/styles.css
@@ -380,7 +380,13 @@ footer p {
 
 /* -------------TRAVEL BLOG------------- */
 
-.travelB {
+.travelbody {
+    height: -o-calc(100% - 65px);
+    /* opera */
+    height: -webkit-calc(100% - 65px);
+    /* google, safari */
+    height: -moz-calc(100% - 65px);
+    /* firefox */
     padding: 20px;
     background: #f1f1f1;
 }
@@ -388,22 +394,35 @@ footer p {
 /* Create two unequal columns that floats next to each other */
 /* Left column */
 .leftcolumn {
+    margin-left: 40px;
     float: left;
-    width: 75%;
+    width: 70%;
 }
 
 /* Right column */
 .rightcolumn {
     float: left;
-    width: 25%;
+    width: 20%;
     padding-left: 20px;
 }
 
 /* Fake image */
 .fakeimg {
     background-color: #aaa;
-    width: 100%;
+    width: 80%;
     padding: 20px;
+}
+
+.fakeimg1 {
+    background-color: transparent;
+    width: 80%;
+    padding: 20px;
+    text-align: center;
+}
+
+.fakeimg1 img {
+    height: 100px;
+
 }
 
 /* Add a card effect for articles */
@@ -413,19 +432,16 @@ footer p {
     margin-top: 20px;
 }
 
+.card h2 a {
+    text-decoration: none;
+    color: #fff;
+}
+
 /* Clear floats after the columns */
 .row:after {
     content: "";
     display: table;
     clear: both;
-}
-
-/* Footer */
-.footer {
-    padding: 20px;
-    text-align: center;
-    background: #ddd;
-    margin-top: 20px;
 }
 
 /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
