--- a/Assets/CSS/styles.css
+++ b/Assets/CSS/styles.css
@@ -6,60 +6,32 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "museo-slab", serif;
     /*Respetar los padding adicionales*/
+    font-family: "museo-slab", serif;
 }
 
+/* ------------Smooth Scrolling------------- */
 html {
     scroll-behavior: smooth;
 }
 
-header .bar ul {
-    background-color: #394867;
-    box-shadow: 0px 0px 10px #33415c;
-    margin: 0;
-    padding: 1rem 0;
-    border-radius: 0.2rem;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    font-size: 30px;
+/*BS Overide*/
+.navbar {
+    background-color: #394867 !important;
 }
 
-header .bar li {
-    list-style-type: none;
-    margin-right: 2rem;
-    /* display: inline-block; */
+.navbar-brand-img {
+    width: 7rem
 }
 
-header .bar li a {
-    text-decoration: none;
-    color: #f5f5dc;
-}
+a.nav-link {
+    width: 8rem;
+    justify-content: space-evenly;
 
-header .bar li:first-child {
-    margin-right: auto;
-    margin-left: 2rem;
-}
-
-
-header .bar a:hover {
-    color: #000;
-    transition: all 200ms ease-in;
-}
-
-header .bar button {
-    background-color: transparent;
-    transition: all 200ms ease-in;
-    font-size: 30px;
-    border: none;
-    outline: none;
-    color: #f5f5dc;
-    cursor: pointer;
-}
-
-header .bar button:hover {
-    color: #352F44;
+    font-size: ;
+    color: #fff;
+    font-size: 20px;
+    font-weight: lighter;
 }
 
 /* INDEX */
@@ -144,10 +116,11 @@ section {
     text-decoration: none;
     color: #f5f5dc;
 }
+
 #sec1-button a {
     text-decoration: none;
     text-transform: uppercase;
-    color:#347f38;
+    color: #347f38;
 }
 
 
@@ -157,10 +130,14 @@ section {
     align-items: center;
     text-align: center;
     margin-bottom: 20px;
-    background-size: cover; /* Add this line */
-    background-position: center center; /* Add this line */
-    background-repeat: no-repeat; /* Add this line */
-    background-attachment: fixed; /* Add this line */
+    background-size: cover;
+    /* Add this line */
+    background-position: center center;
+    /* Add this line */
+    background-repeat: no-repeat;
+    /* Add this line */
+    background-attachment: fixed;
+    /* Add this line */
     color: #fff;
 }
 
@@ -500,10 +477,14 @@ footer p {
     align-items: center;
     text-align: center;
     margin-bottom: 20px;
-    background-size: cover; /* Add this line */
-    background-position: center center; /* Add this line */
-    background-repeat: no-repeat; /* Add this line */
-    background-attachment: fixed; /* Add this line */
+    background-size: cover;
+    /* Add this line */
+    background-position: center center;
+    /* Add this line */
+    background-repeat: no-repeat;
+    /* Add this line */
+    background-attachment: fixed;
+    /* Add this line */
 }
 
 #hero .profile-img {
@@ -518,12 +499,14 @@ footer p {
 .about-section h3 {
     font-size: 2em;
 }
-.results{
+
+.results {
     display: flex;
     flex-direction: column;
     flex-basis: 100%;
     flex: 1;
 }
+
 .section-inner {
     display: flex;
     flex-direction: row;
@@ -532,32 +515,33 @@ footer p {
     justify-content: space-around;
 }
 
-.about-contact a{
+.about-contact a {
     margin: 40px;
     text-decoration: none;
     color: #212A3E;
 }
 
-.section-inner2{
+.section-inner2 {
     align-items: center;
     margin-bottom: 40px;
 }
 
-.about-data{
+.about-data {
     font-size: 30px;
     color: #347f38;
     font-weight: 700;
 }
-.about-label{
+
+.about-label {
     font-size: 20px;
 }
 
 #hero {
-    background-image: linear-gradient(rgba(255,255,255,0.75),rgba(255,255,255,0.75)), url('./Media/contactH.JPG');
+    background-image: linear-gradient(rgba(255, 255, 255, 0.75), rgba(255, 255, 255, 0.75)), url('./Media/contactH.JPG');
 }
 
 #about {
-    background-image: linear-gradient(rgba(255,255,255,0.75),rgba(255,255,255,0.75)), url('./Media/contactH.JPG');
+    background-image: linear-gradient(rgba(255, 255, 255, 0.75), rgba(255, 255, 255, 0.75)), url('./Media/contactH.JPG');
 }
 
 
