--- a/Assets/CSS/styles.css
+++ b/Assets/CSS/styles.css
@@ -186,52 +186,43 @@ section {
 
 /* Carrousel attempt only with CSS*/
 
-#slider {
-    overflow: hidden;
-    margin-top: 20px;
+.d-flex{
+    height: 53rem;
 }
-
-/* Positions, moving to the left */
-@keyframes slider {
-    0% {
-        left: 0;
-    }
-
-    30% {
-        left: 0;
-    }
-
-    33% {
-        left: -100%;
-    }
-
-    63% {
-        left: -100%;
-    }
-
-    66% {
-        left: -200%;
-    }
-
-    95% {
-        left: -200%;
-    }
-
-    100% {
-        left: 0;
-    }
-}
-
-#slider figure {
-    width: 300%;
-    position: relative;
-    animation: 9s slider infinite;
-}
-
-#slider figure img {
-    height: 600px;
-    float: left;
-}
+          /* Media Query for Mobile Devices */
+          @media (min-width: 360px) and (max-width: 480px) {
+            .d-flex {
+                height: 17rem;
+            }
+        }
+          
+        /* Media Query for low resolution  Tablets, Ipads */
+        @media (min-width: 481px) and (max-width: 767px) {
+            .d-flex {
+                height: 22rem;
+            }
+        }
+          
+        /* Media Query for Tablets Ipads portrait mode */
+        @media (min-width: 768px) and (max-width: 1024px){
+            .d-flex {
+                height: 27rem;
+            }
+        }
+          
+        /* Media Query for Laptops and Desktops */
+        @media (min-width: 1025px) and (max-width: 1280px){
+            .d-flex {
+                height: 32rem;
+            }
+        }
+          
+        /* Media Query for Large screens */
+        @media (min-width: 1281px) {
+            .d-flex{
+                height: 37rem;
+            }
+        }
 
 /* footer */
 footer {
