--- a/Assets/CSS/styles.css
+++ b/Assets/CSS/styles.css
@@ -87,7 +87,7 @@ a.nav-link {
 @media (min-width: 360px) and (max-width: 480px) {
 
     #background-video {
-        height: 100%;
+        height: 100vh;
         width: 100%;
         background-size: cover;
         background-position: center;
@@ -453,16 +453,42 @@ a.nav-link {
     color: #fff;
 }
 
+/* Media Query for Mobile Devices */
+@media (min-width: 360px) and (max-width: 480px) {
+.sec4-contact{
+    height: 100px;
+    margin-bottom: 20px;
+}
+
+   .contact-card{
+    visibility: hidden;
+   }
+
+    }
+
+/* ------------To be Set Up Later On If Needed------------- */
+/* Media Query for low resolution  Tablets, Ipads */
+@media (min-width: 481px) and (max-width: 767px) {}
+
+/* Media Query for Tablets Ipads portrait mode */
+@media (min-width: 768px) and (max-width: 1024px) {}
+
+/* Media Query for Laptops and Desktops */
+@media (min-width: 1025px) and (max-width: 1280px) {}
+
+/* Media Query for Large screens */
+@media (min-width: 1281px) {}
+
 /* ------------ FOOTER ------------*/
 footer {
-    background-color: #394867;
-    color: #f5f5dc;
-    text-align: center;
-    font-size: 20px;
     position: static;
     left: 0;
     bottom: 0;
     width: 100%;
+    background-color: #394867;
+    color: #f5f5dc;
+    text-align: center;
+    font-size: 20px;
     padding: 15px;
     margin-top: 50px;
 }
@@ -479,6 +505,21 @@ footer p {
 .redes i {
     letter-spacing: 20px;
 }
+
+
+    
+    /* ------------To be Set Up Later On If Needed------------- */
+    /* Media Query for low resolution  Tablets, Ipads */
+    @media (min-width: 481px) and (max-width: 767px) {}
+    
+    /* Media Query for Tablets Ipads portrait mode */
+    @media (min-width: 768px) and (max-width: 1024px) {}
+    
+    /* Media Query for Laptops and Desktops */
+    @media (min-width: 1025px) and (max-width: 1280px) {}
+    
+    /* Media Query for Large screens */
+    @media (min-width: 1281px) {}
 
 /* ------------ BACKUP BUTTON ------------*/
 .up {
