--- a/Assets/CSS/styles.css
+++ b/Assets/CSS/styles.css
@@ -460,9 +460,9 @@ a.nav-link {
     margin-bottom: 20px;
 }
 
-   .contact-card{
+   /* .contact-card{
     visibility: hidden;
-   }
+   } */
 
     }
 
@@ -564,7 +564,7 @@ footer p {
 
 .text-big {
     font-weight: bold;
-    font-size: 41px;
+    font-size: 20px;
     text-align: center;
 }
 
