--- a/Assets/CSS/styles.css
+++ b/Assets/CSS/styles.css
@@ -43,6 +43,7 @@ h2 {
 
 section {
     background-color: hsla(0, 0%, 56%, 0.5);
+    height: auto;
     width: 100%;
     margin-bottom: 10px;
 }
@@ -449,22 +450,11 @@ a.nav-link {
 }
 
 .sec4-contact a {
+    height: 100px;
     text-decoration: none;
     color: #fff;
 }
 
-/* Media Query for Mobile Devices */
-@media (min-width: 360px) and (max-width: 480px) {
-.sec4-contact{
-    height: 100px;
-    margin-bottom: 20px;
-}
-
-   /* .contact-card{
-    visibility: hidden;
-   } */
-
-    }
 
 /* ------------To be Set Up Later On If Needed------------- */
 /* Media Query for low resolution  Tablets, Ipads */
@@ -479,162 +469,49 @@ a.nav-link {
 /* Media Query for Large screens */
 @media (min-width: 1281px) {}
 
-/* ------------ FOOTER ------------*/
-footer {
-    position: static;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    background-color: #394867;
-    color: #f5f5dc;
-    text-align: center;
-    font-size: 20px;
-    padding: 15px;
-    margin-top: 50px;
-}
-
-footer p {
-    margin: 10px;
-}
-
-.redes a {
-    font-size: 50px;
-    color: #f5f5dc;
-}
-
-.redes i {
-    letter-spacing: 20px;
-}
-
-
-    
-    /* ------------To be Set Up Later On If Needed------------- */
-    /* Media Query for low resolution  Tablets, Ipads */
-    @media (min-width: 481px) and (max-width: 767px) {}
-    
-    /* Media Query for Tablets Ipads portrait mode */
-    @media (min-width: 768px) and (max-width: 1024px) {}
-    
-    /* Media Query for Laptops and Desktops */
-    @media (min-width: 1025px) and (max-width: 1280px) {}
-    
-    /* Media Query for Large screens */
-    @media (min-width: 1281px) {}
-
-/* ------------ BACKUP BUTTON ------------*/
-.up {
-    height: 40px;
-    width: 40px;
-    border-radius: 20px;
-    background-color: #394867;
-    color: #fff;
-    position: fixed;
-    right: 40px;
-    bottom: 40px;
-    text-align: center;
-    line-height: 40px;
-    font-size: 30px;
-    box-shadow: 0 0 5px #fff;
-    transition: all 200ms ease-in-out;
-}
-
-.up:hover {
-    color: #352F44;
-}
 
 /* ------------ PAGES CSS ------------- */
 
 /* -------------CONTACT ME REUSE FOR INDEX VIEW------------- */
 
+/*Body*/
 .contactB {
-    background-image: url(../Media/Contact.png);
+    
+    background-image: url(../Media/fade.JPG);
     background-position: 0;
-    background-size: cover;
-    box-decoration-break: slice;
-}
+    background-size: auto;
 
+}
 .box-main {
     display: flex;
     justify-content: center;
-    align-items: center;
-    color: #f5f5dc;
+    padding-top: 20px;
+    color: #fff;
     margin: auto;
     height: 80%;
+    font-weight: bold;
 }
 
 .text-big {
-    font-weight: bold;
-    font-size: 20px;
+    color: #fff;
+    font-size: 30px;
     text-align: center;
 }
 
-.h-primary {
-    color: #f5f5dc;
-    padding-top: 40px;
-    margin-top: 30px;
-    text-align: center;
-}
-
-.contact-card {
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-    text-align: center;
-    transition: transform 0.3s, box-shadow 0.3s;
-    margin: 20px;
-}
-
-.contact-card i {
-    font-size: 40px;
-    margin-bottom: 30px;
-    color: #f5f5dc;
-}
-
-.contact-card:hover {
-    transform: translateY(-5px);
-    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.2);
-}
-
-.form {
-    display: block;
-    width: 100%;
-    margin-top: 12px;
-    text-overflow: ellipsis;
-    border: 0;
-    font-family: inherit
-}
-
-.form-field {
-    margin: 2rem;
-
-}
-
-.form-input {
-    background-color: hsl(60, 56%, 91%, 0.7) !important;
-    width: 40%;
-    padding: 24px 31px;
+.h-primary{
+    color: #fff;
     font-size: 20px;
-    border-radius: 10px;
-    color: inherit;
-    line-height: 1.2;
+    text-align: center;
+    padding-top: 20px;
+}
+.form-label {
+    color: #fff;
+font-weight: bold;
 }
 
-.form-button {
-    width: 40%;
-    margin: 20px;
-    padding: 10px;
-    font-size: 20px;
-    background: hsl(221, 31%, 19%, 0.8);
-    outline: none;
-    cursor: pointer;
-    border-radius: 10px;
-    color: #f5f5dc;
+section .container .py-4{
+    height: 100vh !important;
 }
-
-.form-button:hover {
-    background-color: #f5f5dc;
-}
-
 /* -------------TRAVEL BLOG------------- */
 
 .travelbody {
@@ -914,4 +791,68 @@ footer p {
 
 .gallery-image:hover {
     transform: scale(1.15);
+}
+
+/* ------------ FOOTER ------------*/
+footer {
+    position: static;
+    bottom: 0;
+    width: 100%;
+    height: 7rem;
+    background-color: #394867;
+    color: #f5f5dc;
+    font-size: 15px;
+    padding: 15px;
+    margin-top: 20px;
+    text-align: center;
+}
+
+footer p {
+    margin: 10px;
+}
+
+.redes a {
+    font-size: 30px;
+    color: #f5f5dc;
+}
+
+.redes i {
+    letter-spacing: 25px;
+
+}
+
+
+    
+    /* ------------To be Set Up Later On If Needed------------- */
+    /* Media Query for low resolution  Tablets, Ipads */
+    @media (min-width: 481px) and (max-width: 767px) {}
+    
+    /* Media Query for Tablets Ipads portrait mode */
+    @media (min-width: 768px) and (max-width: 1024px) {}
+    
+    /* Media Query for Laptops and Desktops */
+    @media (min-width: 1025px) and (max-width: 1280px) {}
+    
+    /* Media Query for Large screens */
+    @media (min-width: 1281px) {}
+
+/* ------------ BACKUP BUTTON ------------*/
+.up {
+    height: 40px;
+    width: 40px;
+    border-radius: 20px;
+    background-color: #394867;
+    color: #fff;
+    position: fixed;
+    right: 40px;
+    bottom: 40px;
+    text-align: center;
+    line-height: 40px;
+    font-size: 30px;
+    box-shadow: 0 0 5px #fff;
+    transition: all 200ms ease-in-out;
+}
+
+.up:hover {
+    color: #352F44;
 }
